--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,4 +1,191 @@
+:root{
+  --primary: #FFD366;
+  --dark: #424242;
+  --success: #86D73F;
+  --too-thin: #31BAF9;
+  --over-weight: #FF982D;
+  --fat: #FF6C03;
+  --so-fucking-fat: #FF1200;
+}
+*{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  color: var(--dark);
+}
+h2{
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 36px;
+}
+p{
+  font-size: 20px;
+}
+small{
+  font-size: 12px;
+}
+img{
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+.container{
+  max-width: 650px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.main{
+  padding-top: 48px;
+  padding-bottom: 74px;
+  min-height: calc(100vh - 530px);
+}
+.bg-primary{
+  background-color: var(--primary);
+}
+.bg-gray{
+  background-color: #eee;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 56px 0;
+  h1{
+    width: 15%;
+  }
+  .calculator-area{
+    width: 80%;
+  }
+}
 h1{
-  font-size: 60px;
-  color: #fbc;
+  img{
+    width: 100%;
+  }
+}
+.calculator-area{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.check-btn{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  width: 120px;
+  height: 120px;
+  font-size: 24px;
+  cursor: pointer;
+
+  background-color: var(--primary);
+  border: #fff 3px solid;
+  border-radius: 50%;
+
+  .reset-result{
+    position: absolute;
+
+  }
+  p{
+    position: relative;
+  }
+  small{
+    color: inherit ;
+    font-size: 14px;
+    position: absolute;
+    bottom: -60%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  em{
+    color: inherit;
+    font-size: 32px;
+    line-height: 32px;
+    width: 64px;
+    font-style: initial;
+    position: absolute;
+    left: 200%;
+  }
+  &-thin{
+    color: var(--too-thin);
+    border: 6px solid var(--too-thin);
+  }
+  &-overWeight{
+    color: var(--over-weight);
+    border: 6px solid var(--fat);
+  }
+  &-gg{
+    color: var(--so-fucking-fat);
+    border: 6px solid var(--so-fucking-fat);
+  }
+}
+.check-btn-success{
+  color: var(--success);
+  border: 6px solid var(--success);
+}
+.input-area{
+  >*{
+    display: block;
+  }
+  label{
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+  input{
+    width: 80%;
+    background: rgba(255,255,255,.7);
+    border: 2px solid var(--primary);
+    border-radius: 10px;
+    font-size: 24px;
+    color: var(--dark);
+    padding: 8px 16px;
+    margin-bottom: 24px;
+  }
+}
+.BMI-list{
+  background-color: transparent;
+  li{
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border-left: 6px solid #000;
+    background-color: #fff;
+  }
+  div{
+    display: flex;
+    align-items: center;
+    small{
+      margin-right: 8px;
+    }
+  }
+}
+.border-sucess{
+  border-color: var(--success) !important;
+}
+.border-thin{
+  border-color: var(--too-thin) !important;
+}
+.border-overWeight{
+  border-color: var(--over-weight) !important;
+}
+.border-fat{
+  border-color: var(--fat) !important;
+}
+.border-gg{
+  border-color: var(--so-fucking-fat) !important;
+}
+.footer{
+  padding-top: 16px;
+  padding-bottom: 16px;
+  .logo-box{
+    width: 55px;
+    height: 55px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
