--- a/scss/all.scss
+++ b/scss/all.scss
@@ -14,6 +14,9 @@
   text-decoration: none;
   color: var(--dark);
 }
+*,*::before,*::after{
+  box-sizing: border-box;
+}
 h2{
   font-size: 24px;
   text-align: center;
@@ -84,10 +87,25 @@ h1{
   background-color: var(--primary);
   border: #fff 3px solid;
   border-radius: 50%;
-
+ 
+ 
   .reset-result{
     position: absolute;
-
+    width: 30px;
+    padding: 5px;
+    right: 8%;
+    bottom: 0;
+    display: flex;
+    background-color: var(--success);
+    border-radius: 50%;
+    box-shadow: 0 0 0 2px var(--primary);
+    
+    img{
+      margin-left: auto;
+      margin-top: auto;
+      width: 80%;
+      object-fit: contain;
+    }
   }
   p{
     position: relative;
