改高度、清除紀錄等

--- a/css/all.css
+++ b/css/all.css
@@ -52,7 +52,7 @@ img {
 .main {
   padding-top: 48px;
   padding-bottom: 74px;
-  height: calc(100vh - 410px);
+  min-height: calc(100vh - 361px);
 }
 
 .bg-primary {
@@ -95,9 +95,8 @@ h1 img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .check-btn {
@@ -262,6 +261,9 @@ h1 img {
   font-size: 24px;
   color: var(--dark);
   padding: 8px 16px;
+}
+
+.input-area input:nth-child(1) {
   margin-bottom: 24px;
 }
 
@@ -339,4 +341,22 @@ h1 img {
   height: 55px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.warning-text {
+  color: red;
+  font-size: 16px;
+  white-space: nowrap;
+  margin: 8px;
+  position: absolute;
+}
+
+.clearAllBMI {
+  margin-bottom: 8px;
+  font-size: 16px;
+  border-radius: 3px;
+  padding: 5px 10px;
+  background-color: var(--primary);
+  color: black;
+  border-color: #fff;
 }
